dev: prytaneum types, and starting to compose pages, sectionlist updates, and scrollbar update/fix

--- a/.storybook/main.css
+++ b/.storybook/main.css
@@ -5,4 +5,5 @@ div#root {
     height: 100%;
     /* margin: 0;
     padding: 0; */
+    overflow: hidden;
 }
