--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,5 @@ body,
 div#root {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
